force-app/main/default/objects/InsurancePolicy/fields/Account_Current__c.field-meta.xml
<CustomField>
    <fullName>Account_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true then the account is currently payment up and not late. The account is considered in good standing and the next expected payment would be the ned due amount as defined by the payment frequency</description>
    <label>Account Current</label>
    <type>Checkbox</type>
</CustomField>