force-app/main/default/objects/InsurancePolicy/fields/Last_PMT_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_PMT_Date__c</fullName>
    <description>The date of that last payment received as payment toward the policy</description>
    <label>Last Payment Received Date</label>
    <type>Date</type>
</CustomField>