force-app/main/default/objects/InsurancePolicy/fields/Periodic_payment_amount__c.field-meta.xml
<CustomField>
    <fullName>Periodic_payment_amount__c</fullName>
    <description>Calculated feild to show the regular payment premiums for an account in good standing</description>
    <formula>((GrossWrittenPremium +  StandardFeeAmount +  StandardTaxAmount +  TaxesSurcharges) 
/ (YEAR(DATEVALUE(ExpirationDate)) - YEAR(DATEVALUE(EffectiveDate)) + 
IF(MONTH(DATEVALUE(ExpirationDate)) - MONTH(DATEVALUE(EffectiveDate)) &lt;&gt; 0, 
(MONTH(DATEVALUE(ExpirationDate)) - MONTH(DATEVALUE(EffectiveDate)))/12, 0)) 
/ CASE( Text(PremiumFrequency), &apos;Monthly&apos;, 12, &apos;Semi-Monthly(twice a month)&apos;, 24, &apos;Quarterly&apos;, 4, &apos;Semi Annual(twice a year)&apos;, 2, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodic payment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>