force-app/main/default/objects/InsurancePolicy/fields/Recent_Case_Summary__c.field-meta.xml
<CustomField>
    <fullName>Recent_Case_Summary__c</fullName>
    <label>Recent Case Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>