force-app/main/default/objects/InsurancePolicy/fields/Total_paid_on_policy__c.field-meta.xml
<CustomField>
    <fullName>Total_paid_on_policy__c</fullName>
    <label>Total paid on policy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>