force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__MonthlyPremium__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__MonthlyPremium__c</fullName>
    <label>Monthly Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>