force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__OriginalExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__OriginalExpirationDate__c</fullName>
    <description>DEPRECATED. Please use OriginalExpirationDate.</description>
    <label>Original Expiration Date</label>
    <type>DateTime</type>
</CustomField>