force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__PolicyTerm__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__PolicyTerm__c</fullName>
    <description>DEPRECATED. Please use PolicyTerm.</description>
    <label>Policy Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>