force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__PremiumCalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__PremiumCalculationMethod__c</fullName>
    <description>DEPRECATED. Please use PremiumCalculationMethod.</description>
    <label>Premium Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Modal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>