force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__PremiumPaymentType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__PremiumPaymentType__c</fullName>
    <description>DEPRECATED. Please use PremiumPaymentType.</description>
    <label>Premium Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
                <default>true</default>
                <label>Advance</label>
            </value>
            <value>
                <fullName>Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>