force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__ProductionCodeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__ProductionCodeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producer&apos;s Production Code</description>
    <label>Production Code</label>
    <referenceTo>vlocity_ins__ProductionCode__c</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>InsurancePolicyProductionCodes</relationshipName>
    <type>Lookup</type>
</CustomField>