force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__TotalAmountForTerm__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__TotalAmountForTerm__c</fullName>
    <description>DEPRECATED. Please use GrossWrittenPremium.</description>
    <formula>vlocity_ins_fsc__TotalFeeForTerm__c + vlocity_ins_fsc__TotalTaxForTerm__c + vlocity_ins_fsc__TotalPremiumForTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount for Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>