force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__TotalCommission__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__TotalCommission__c</fullName>
    <label>Total Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>