force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__TotalTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__TotalTaxAmount__c</fullName>
    <label>Total Tax Amount</label>
    <summarizedField>vlocity_ins_fsc__InsurancePolicyPricingAdjustment__c.vlocity_ins_fsc__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>vlocity_ins_fsc__InsurancePolicyPricingAdjustment__c.vlocity_ins_fsc__AdjustmentType__c</field>
        <operation>equals</operation>
        <value>Tax</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_ins_fsc__InsurancePolicyPricingAdjustment__c.vlocity_ins_fsc__InsurancePolicyId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>