force-app/main/default/objects/InsurancePolicy/fields/vlocity_ins_fsc__TotalTaxForTerm__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__TotalTaxForTerm__c</fullName>
    <description>DEPRECATED. Please use TermTaxAmount.</description>
    <label>Total Tax for Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>